refactor: ContractExecutorTest